change path for logout.php

--- a/navbar_I.html
+++ b/navbar_I.html
@@ -18,7 +18,7 @@
         <a class="nav-link" href="../Instructor/MonthlyKPI.php">檢視績效</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../logout.php">登出</a>
+        <a class="nav-link" href="../u/logout.php">登出</a>
       </li>       
     </ul>
   </div>  
