--- a/navbar_M.html
+++ b/navbar_M.html
@@ -12,13 +12,13 @@
         <a class="nav-link" href="../Member/coursesReserved.php">已約未上</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../Member/coursesBought.php#">已買課程</a>
+        <a class="nav-link" href="../Member/coursesBought.php">已買課程</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="../Member/coursesTaken.php">已上課程</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../logout.php">登出</a>
+        <a class="nav-link" href="../u/logout.php">登出</a>
       </li>       
     </ul>
   </div>  
