--- a/navbar_M.html
+++ b/navbar_M.html
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="../Member/index.php">預約課程</a>
+        <a class="nav-link" href="../Member/findAppoint.php">預約課程</a>
       </li>
       <li class="nav-item">  
         <a class="nav-link" href="../Member/coursesReserved.php">已約未上</a>
