--- a/navbar_I.html
+++ b/navbar_I.html
@@ -1,24 +1,24 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="../index.php">Navbar</a>
+  <a class="navbar-brand" href="../index.php" style="font-size:50px">POWER LIFE</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="../Instructor/Instructor_Center.php">會員中心</a>
+        <a class="nav-link" href="../Instructor/Instructor_Center.php" style="font-size:30px">會員中心</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../Instructor/NewCourse.php">建立課程</a>
+        <a class="nav-link" href="../Instructor/NewCourse.php" style="font-size:30px">建立課程</a>
       </li>
       <li class="nav-item">  
-        <a class="nav-link" href="../Instructor/ArrangePeriod.php">安排時段</a>
+        <a class="nav-link" href="../Instructor/ArrangePeriod.php" style="font-size:30px">安排時段</a>
       </li>
       <li class="nav-item">  
-        <a class="nav-link" href="../Instructor/MonthlyKPI.php">檢視績效</a>
+        <a class="nav-link" href="../Instructor/MonthlyKPI.php" style="font-size:30px">檢視績效</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../u/logout.php">登出</a>
+        <a class="nav-link" href="../u/logout.php" style="font-size:30px">登出</a>
       </li>       
     </ul>
   </div>  
