--- a/navbar_M.html
+++ b/navbar_M.html
@@ -1,24 +1,27 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="../index.php">Navbar</a>
+  <a class="navbar-brand" href="../index.php" style="font-size:50px">POWER LIFE</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="../Member/findAppoint.php">預約課程</a>
+        <a class="nav-link" href="../Member/index.php" style="font-size:30px">預約課程</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="../Member/findAppoint.php" style="font-size:30px">查詢可預約時段</a>
       </li>
       <li class="nav-item">  
-        <a class="nav-link" href="../Member/coursesReserved.php">已約未上</a>
+        <a class="nav-link" href="../Member/coursesReserved.php" style="font-size:30px">已約未上</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../Member/coursesBought.php">已買課程</a>
+        <a class="nav-link" href="../Member/coursesBought.php" style="font-size:30px">已買課程</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../Member/coursesTaken.php">已上課程</a>
+        <a class="nav-link" href="../Member/coursesTaken.php" style="font-size:30px">已上課程</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../u/logout.php">登出</a>
+        <a class="nav-link" href="../u/logout.php" style="font-size:30px">登出</a>
       </li>       
     </ul>
   </div>  
