member NAVBAR update

--- a/navbar_M.html
+++ b/navbar_M.html
@@ -6,10 +6,7 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="../Member/index.php" style="font-size:30px">預約課程</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../Member/findAppoint.php" style="font-size:30px">查詢可預約時段</a>
+        <a class="nav-link" href="../Member/findAppoint.php" style="font-size:30px">查詢時段</a>
       </li>
       <li class="nav-item">  
         <a class="nav-link" href="../Member/coursesReserved.php" style="font-size:30px">已約未上</a>
